[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_package_template"
dynamic = ["version"]
description = "A template Python package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "commitizen>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python_package_template"
Repository = "https://github.com/yourusername/python_package_template.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
version = {attr = "python_package_template.__version__"}

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
