[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvz_layer_manager"
dynamic = ["version"]
description = "Layered visualization wrapper on top of Datoviz"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kshitij Goel", email = "kshitijgoel16061995@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "commitizen>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/kshitijgoel007/dvz_layer_manager"
Repository = "https://github.com/kshitijgoel007/dvz_layer_manager.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
version = {attr = "dvz_layer_manager.__version__"}

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
