[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvz_layer_manager"
version = "0.0.1"
description = "Layered visualization wrapper on top of Datoviz"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kshitij Goel", email = "kshitijgoel16061995@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "datoviz"
]

[project.optional-dependencies]
dev = [
    "commitizen>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/kshitijgoel007/dvz_layer_manager"
Repository = "https://github.com/kshitijgoel007/dvz_layer_manager.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
version = {attr = "dvz_layer_manager.__version__"}

# Commitizen configuration
[tool.commitizen]
version = "0.1.0"
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
update_changelog_on_bump = true
major_version_zero = true
